# compute-rust-passkey

./: .gitignore  .gitmodules  Cargo.toml  README.md  fastly.toml
demo/: demo-manifest
src/: main.rs
src/assets/: auth.js  index.html  style.css  webauthn.js
